projetos/desafio-final-dk8s/semana-2/k8s/tipsbank-transacoes/api-transacoes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-transacoes
  namespace: tipsbank-transacoes
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-transacoes
  template:
    metadata:
      labels:
        app: api-transacoes
        version: v1
    spec:
      # fsGroup garante que o emptyDir seja gravável pelo user nonroot (uid 65532)
      securityContext:
        fsGroup: 65532
      # imagePullSecrets:
      #   - name: registry-credentials
      containers:
        - name: api-transacoes
          image: romulow22/tipsbank-api-transacoes:v1.1.0
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - name: app-logs
              mountPath: /var/log/app

        - name: log-forwarder
          image: busybox:1.36
          command: ["sh", "-c", "tail -F /var/log/app/app.log 2>/dev/null || (sleep 2 && tail -F /var/log/app/app.log)"]
          volumeMounts:
            - name: app-logs
              mountPath: /var/log/app
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 50m
              memory: 32Mi

      volumes:
        - name: app-logs
          emptyDir: {}
