projetos/desafio-final-dk8s/semana-2/k8s/tipsbank-transacoes/api-transacoes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-transacoes
  namespace: tipsbank-transacoes
spec:
  selector:
    app: api-transacoes
    version: v1
  ports:
    - port: 8080
      targetPort: 8080
