projetos/desafio-final-dk8s/semana-2/k8s/tipsbank-transacoes/ingress-api-transacoes-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api-transacoes-canary
  namespace: tipsbank-transacoes
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    # Canary: 10% of /transacoes/* traffic is routed to v2
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
    # Extra: force v2 by sending header X-Canary: true
    nginx.ingress.kubernetes.io/canary-by-header: "X-Canary"
    nginx.ingress.kubernetes.io/canary-by-header-value: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.tipsbank.local
      secretName: tipsbank-api-tls  
  rules:
    - host: api.tipsbank.local
      http:
        paths:
          - path: /transacoes(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-transacoes-v2
                port:
                  number: 8080
